--- a/.github/workflows/github-actions-build-and-release.yml
+++ b/.github/workflows/github-actions-build-and-release.yml
@@ -20,7 +20,6 @@ jobs:
           name: CNC-Hole-CAM
           path: dist/CNC-Hole-CAM.exe
 
-
       - name: Upload release asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
@@ -28,6 +27,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: dist/windows/CNC-Hole-CAM.exe
+          asset_path: dist/CNC-Hole-CAM.exe
           asset_name: CNC-Hole-CAM.exe
           asset_content_type: application/octet-stream
