--- a/.github/workflows/github-actions-build-and-release.yml
+++ b/.github/workflows/github-actions-build-and-release.yml
@@ -14,11 +14,13 @@ jobs:
         with:
           python_ver: '3.12'
           spec: 'main.spec'
+          upload_exe_with_name: 'CNC-Hole-CAM'
+          is_uploaded: true
 
       - uses: actions/upload-artifact@v4
         with:
           name: CNC-Hole-CAM
-          path: dist/CNC-Hole-CAM.exe
+          path: cnc-hole-cam/dist/CNC-Hole-CAM.exe
 
       - name: Upload release asset
         id: upload-release-asset
@@ -27,6 +29,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: dist/CNC-Hole-CAM.exe
+          asset_path: cnc-hole-cam/dist/CNC-Hole-CAM.exe
           asset_name: CNC-Hole-CAM.exe
           asset_content_type: application/octet-stream
