Fix: maybe final fix

--- a/.github/workflows/github-actions-build-and-release.yml
+++ b/.github/workflows/github-actions-build-and-release.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           python_ver: '3.12'
           spec: 'main.spec'
-          upload_exe_with_name: 'CNC-Hole-CAM'
+          upload_exe_with_name: 'CNC-Hole-CAM.exe'
           is_uploaded: true
 
       - name: Upload release asset
@@ -24,6 +24,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: /home/runner/work/cnc-hole-cam/cnc-hole-cam/dist/CNC-Hole-CAM.exe
+          asset_path: dist/CNC-Hole-CAM.exe
           asset_name: CNC-Hole-CAM.exe
           asset_content_type: application/octet-stream
