--- a/.github/workflows/github-actions-build-and-release.yml
+++ b/.github/workflows/github-actions-build-and-release.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: CNC-Hole-CAM
-          path: /home/runner/work/cnc-hole-cam/cnc-hole-cam/dist/CNC-Hole-CAM.exe
+          path: /home/runner/work/cnc-hole-cam/cnc-hole-cam/
 
       - name: Upload release asset
         id: upload-release-asset
