--- a/.github/workflows/github-actions-build-and-release.yml
+++ b/.github/workflows/github-actions-build-and-release.yml
@@ -14,13 +14,7 @@ jobs:
         with:
           python_ver: '3.12'
           spec: 'main.spec'
-          upload_exe_with_name: 'CNC-Hole-CAM.exe'
-          exe_path: ./dist
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: CNC-Hole-CAM
-          path: /home/runner/work/cnc-hole-cam/cnc-hole-cam/
+          upload_exe_with_name: 'CNC-Hole-CAM'
 
       - name: Upload release asset
         id: upload-release-asset
@@ -29,6 +23,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./dist/CNC-Hole-CAM
-          asset_name: CNC-Hole-CAM.exe
+          asset_path: dist/CNC-Hole-CAM
+          asset_name: CNC-Hole-CAM
           asset_content_type: application/octet-stream
