--- a/.github/workflows/github-actions-build-and-release.yml
+++ b/.github/workflows/github-actions-build-and-release.yml
@@ -15,11 +15,7 @@ jobs:
           python_ver: '3.12'
           spec: 'main.spec'
           python_arch: 'x64'
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: CNC-Hole-CAM
-          path: dist/CNC-Hole-CAM.exe
+          is_uploaded: true
 
       - name: Upload release asset
         id: upload-release-asset
