Test: another test CI 2

--- a/.github/workflows/github-actions-build-and-release.yml
+++ b/.github/workflows/github-actions-build-and-release.yml
@@ -15,6 +15,7 @@ jobs:
           python_ver: '3.12'
           spec: 'main.spec'
           python_arch: 'x64'
+          upload_exe_with_name: 'CNC-Hole-CAM'
           is_uploaded: true
 
       - name: Upload release asset
