--- a/.github/workflows/github-actions-build-and-release.yml
+++ b/.github/workflows/github-actions-build-and-release.yml
@@ -9,7 +9,12 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - name: Create Executable
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Create executable
         uses: sayyid5416/pyinstaller@v1.2.0
         with:
           python_ver: '3.12'
